# econ_camera_ws

./: .gitignore  CLAUDE.md  README.md
calibration/: Dockerfile.patch  README.md  aprilgrid.yaml  build_kalibr_arm64.sh  kalibr_detect_report.py  orientation.example.json  run_detect_report.sh  run_kalibr.sh
calibration/cam_lidar/: README.md  accumulate_cloud.py  calib_io.py  chain.py  cloud_io.py  overlay_verify.py  pick_correspondences.py  solve_extrinsic.py  test_cam_lidar.py
calibration/verify/: README.md  common.py  ds_model.py  rectify.py  test_verify.py  verify_extrinsics.py  verify_panorama.py  verify_undistort.py
docs/: BEV_AUTOLABEL.md  CALIBRATION.md  CAM_LIDAR_CALIBRATION.md  LIDAR.md  MAPPING.md  TROUBLESHOOTING.md  USAGE.md
docs/superpowers/plans/: 2026-07-16-econ-camera-ros2-capture.md  2026-07-18-camera-calibration-and-verification.md  2026-07-20-lidar-integration.md  (+4 more)
mapping/: bev_grid.py  check_lidar_bag.py  lio_map_bag.sh  pcd_preview.py  pose_logger.py  tum.py
mapping/test/: test_pose_logger.py
src/econ_camera_ros/: package.xml  setup.cfg  setup.py
src/econ_camera_ros/econ_camera_ros/: bag_extract.py  calib_convert.py  cam_layout.py  capture_node.py  gst_builder.py  kalibr_bridge.py  web_monitor_node.py
src/econ_camera_ros/launch/: record.launch.py  record_all.launch.py  record_lidar.launch.py
src/econ_camera_ros/test/: test_bag_extract.py  test_calib_convert.py  test_cam_layout.py  test_gst_builder.py  test_kalibr_bridge.py  test_web_monitor.py
src/unitree_lidar_ros2/: CMakeLists.txt
tools/: check_recording.py
(+8 files in other folders)
