<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>econ_camera_ros</name>
  <version>0.1.0</version>
  <description>e-con AR0234 4-camera 연속 동기 수집 ROS2 노드</description>
  <maintainer email="dhlee@sju.ac.kr">DoHyeon_Lee</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
